----------------------------------------
-- v 3.4
----------------------------------------
	- Add ability to specify devices by product and vendor IDs
	- Add ability to specify devices by device node

----------------------------------------
-- v 3.3
----------------------------------------
	- Add Powermate setRotateSensitivity function
		- New variable in GizmoDeviceStrings.py called
		  POWERMATE_ROTATE_SENSITIVITY for this!
	- Add PowermateEvent ClickTime property (duration of button press)
	- Add GizmodThread class for creating threads from Python
		- DO NOT USE!! (HIGHLY EXPERIMENTAL!)
	- Add GizmodTimer class for creating timer objects from Python
	- Add script 200-Powermate-ButtonTimeout for generating button
	  timeout events
		- New variable in GizmoDeviceStrings.py called
		  POWERMATE_BUTTON_TIMEOUT for this!
	- Add script 201-Powermate-Beryl
		- So far this detects a powermate button timeout and
		  unfolds the beryl cube, and lets you scroll the unfolded
		  cube with the dial
	- Add base script GizmoScriptAltTabber so that devices have an 
	  easy way of sending Alt-Tab events
		- New variable in GizmoDeviceStrings.py called
		  ALT_TAB_TIMEOUT for this!
	- Add remote ?00-Intercept scripts for alt-tabbing support
		- This allows the default mapping to start alt-tab
		  and to still alt-tab passed applications (if alt-tab
		  actually focuses apps) if those apps happen to use
		  the same button that initialized the alt-tab
	- Add Gizmod namespace to libGizmod

----------------------------------------
-- v 3.2
----------------------------------------
	- Updated the Python API so that scripts can just inherit
	  a desirable base class, and gain required functionality
	  ie, inherit from GizmoScriptApplicationRunning if the
	  device application mapping should be used when a specific
	  app has foreground focus
	- Fix potential crash bugs in network object deserialization
	  code.
	- Fix potential infinite loop in X11FocusWatcher on shutdown